--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.zipcoder.ZipChat</groupId>
     <artifactId>YouAreEll</artifactId>
     <packaging>pom</packaging>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Client</module>
@@ -18,5 +22,17 @@
             <artifactId>jackson-databind</artifactId>
             <version>[2.9.9,)</version>
         </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
+
     </dependencies>
 </project>
